--- a/index.html
+++ b/index.html
@@ -5,31 +5,64 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hair Day</title>
-    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/25d88d55cf.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
-        <img src="images/Artboard 1.png">
+        <img src="images/Artboard 19.png" class="col-3 top-logo">
     </header>
     <nav>
         <ul>
-            <li><a href="">home page</a></li>
-            <li><a href=""></a>products</li>
-            <li><a href=""></a>Contact</li>
-            <li><a href=""></a>Info</li>
+            <li><a href="?">home page</a></li>
+            <li><a href="yyy">products</a></li>
+            <li><a href="zzz">Contact</a></li>
+            <li><a href="www">Info</a></li>
         </ul>
     </nav>
-    <main>
-        <section>
-            <h1>promotion</h1>
+    <main class="col-12 content">
+        <section class="promotion">
+            <h1>40% Off</h1>
+            <h2>cut + color + styling</h2>
+            <p>Take advantage now of the Christmas offer! a box of three services in one.
+                few seats still available!</p>
         </section>
-        <section>3 info panels
-            <article></article>
+        <section class="info">
+            <article class="staff">
+                <h1>Our Staff</h1>
+                <p>
+                    <ul>
+                        <li><b>Pria-Owner</b><br> (colorist)</li>
+                        <li><b>Garry-CoOwner</b><br> (hairdresser)</li>
+                        <li><b>Matteo</b><br> (colourist)</li>
+                        <li><b>Andrea</b><br> (colourist)</li>
+                        <li><b>Maria</b><br> (colourist)</li>
+                        <li><b>Francesca</b><br> (manicurist)</li>
+                        <li><b>Martina</b><br> (make-up artist)</li>
+                    </ul>
+                </p>
+            </article>
+            <article class="appointment">
+                <h1>Book and schedule one of ours great services</h1>
+                <i class="fa-regular fa-calendar-check" style="font-size:8rem"></i>
+                <button>Book Now</button>
+            </article>
+            <article class="forum">
+                <h1>makeup and nail</h1>
+                <p>reach our great community!</p>
+                <i class="fa-solid fa-user-group"style="font-size:5rem"></i>
+                <div class="btn-comm">
+                    <button>load more</button>
+                    <button>follow</button>
+                </div>
+            </article>
         </section>
     </main>
     <footer>
-        <div class="end-logo"></div>
-        <div id="copryrights"></div>
+        <div class="bot-logo">
+            <img src="images/Artboard 23.png">
+        </div>
+        <div class="copyrights">copyright &copy;2022 HairDay <br>all rights reserved <br>via lorem ipsum 61 <br>tel. 3481092234 <br> opening hours: mon-sat: 8:00-18:00 </div>
     </footer>
 </body>
 </html>
